Split modules